# archtool

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  VISION.md  pyproject.toml
.claude/skills/: add-backend.md  add-opening-type.md
.github/workflows/: ci.yml
corpus/01_gruszowa60/: geometry.yaml
docs/: DECISIONS.md  HANDOFF.md
docs/architecture/: system-diagram.mermaid  target-architecture.md
docs/language/: design-rationale.md  language-card.md  layers-by-example.md  reference.md
examples/czest_gruszowa_60/: dom_dane.yaml  dom_viewer.html  outline_example.yaml
examples/example_house/: dom_dane.yaml
src/archtool/: __init__.py  cli.py  errors.py  geometry_utils.py  models.py  pipeline.py  resolved.py  resolver.py  scaffold.py
src/archtool/backends/: __init__.py  svg.py
src/archtool/validation/: __init__.py  geometry.py
tests/: conftest.py  test_cli.py  test_geometry.py  test_resolver.py  test_svg.py
